# jax-quantum-research

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  exp33.py  make_commits.ps1  push_and_run.sh  pyproject.toml  requirements.txt  requirements_tpu.txt  research_paper.md  run_tpu.sh  supremacy_42_tpu.py  supremacy_75_tpu.py  tpu_examples_runner.py  tpu_quantum_scale.py  vqe_1024q_v5e16.py  vqe_1024q_v5p16.py  vqe_mps_1024q.py
benchmarks/: README.md  benchmark_27q.py  cuda_vs_cpu_benchmark.py  generate_n10_figures.py  n10_rigorous_benchmark.py  plot_27q_gpu.py  plot_gradient.py  plot_scaling.py  run_jax_cuda_benchmark.py  test_trace.py
benchmarks/results/: README.md  n10_benchmark_20260530_212827.json  n10_benchmark_20260530_214024.json
examples/: 06_barren_plateau.py  07_grover_search.py  08_shor_demo.py  README.md
experiment/: README.md
experiment/examples/: 02_vqc_xor.py  05_noisy_monte_carlo.py
experiment/jax_qsim/: circuit.py  density_matrix.py  gates.py  statevector.py
gpu/: run_gpu.sh
gpu/quantum_research/: barren_plateau_gradient_vanishing.py  generate_readme_animations.py  ghz_state_preparation.py  gpu_vram_and_qubit_scaling_benchmark.py  noisy_nisq_circuit_simulation.py  (+4 more)
grover_simulation/: 20qubits.py  30qubits.py  36qubits.py  fullstatevector20qubits.py
jax_qsim/: __init__.py  circuit.py  gates.py  observables.py  statevector.py
results/: cuda_cpu_benchmark_data.json  gpu_real_data.json
tpu/: README.md  run_shor_tpu.sh  run_tpu.sh  shors_algorithm_33q.py  tpu_quantum_scale.py
(+31 files in other folders)
